--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>Documento</title>
 </head>
 <body>
-    
+    <form action="GET">
+        <div>
+            <label for="name">Nome:</label>
+            <input type="text" id="name" name="name">
+        </div>
+        <div>
+            <label for="name">Data Início:</label>
+            <input type="datetime-local" id="inicio" name="inicio">
+        </div>
+        <div>
+            <label for="name">Data Final:</label>
+            <input type="datetime-local" id="final" name="final">
+        </div>
+        <button>
+            Criar
+        </button>
+    </form>
 </body>
 </html>
